syntax = "proto3";

option go_package = "micro/learn1/test11_stream/client/proto";

package proto;

service Greeter {
    // 基础的 rpc 服务
    rpc SayHello(HelloRequest) returns (HelloResponse){}

    // 双向流式
    rpc BiYing(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
    string Name = 1;
}

message HelloResponse {
    string Reply = 1;
}